Fixed test never ending